tests/errors/syn_cases15.java
public class syn_cases15 {
public static void main(String[] args){
switch(args.length){
default return;
}
}
}